Update Zonemindercurl.java